[package]
name = "confmg"
version = "0.1.0"
edition = "2021"
description = "Tool for managing personal config files on different platforms."

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
diffy = "0.3.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
