[package]
name = "confmg"
version = "2.0.0"
edition = "2021"
description = "Tool for managing personal config files on different platforms."
repository = "https://github.com/pablo-ng/confmg"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/pablo-ng/confmg"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
diffy = "0.3.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
