[build-system]
requires = ["setuptools>=47"]
build-backend = "setuptools.build_meta"

[project]
name = "confmgr"
version = "1.0.0"
description = "A simple config manager."
readme = "README.md"
authors = [
  { name="Pablo Navarro", email="pablonavarrogillissen@gmail.com" },
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["config", "manager"]
dependencies = [
    "PyYAML >= 6.0",
]

[project.urls]
"Homepage" = "https://github.com/pablo-ng/confmgr"
"Bug Tracker" = "https://github.com/pablo-ng/confmgr/issues"

[project.scripts]
confmgr = "confmgr.__main__:main"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"confmgr/__main__.py" = ["{version}"]
